--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         html { scroll-behavior: smooth; }
-        .hero-gradient { background: linear-gradient(rgba(15, 23, 42, 0.7), rgba(15, 23, 42, 0.7)), url('https://images.unsplash.com/photo-1523050335392-9bef867a0578?auto=format&fit=crop&q=80'); background-size: cover; background-position: center; }
+        /* Updated background image to students in a classroom */
+        .hero-gradient { background: linear-gradient(rgba(15, 23, 42, 0.7), rgba(15, 23, 42, 0.7)), url('https://images.unsplash.com/photo-1509062522246-3755977927d7?auto=format&fit=crop&q=80'); background-size: cover; background-position: center; }
     </style>
 </head>
 <body class="bg-gray-50 text-gray-800">
@@ -160,7 +161,3 @@
 </body>
 
 </html>
-
-
-
-
